--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://santinozaracho.github.io/optimizer-pl-io",
   "dependencies": {
+    "@material-ui/core": "^4.0.1",
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
